Fix netty warning